fixed issue where buttons were visible

--- a/public/index.css
+++ b/public/index.css
@@ -119,8 +119,9 @@ button {
 
 .send-recipe-to-user-inbox,
 .want-another-recipe {
-  width: 200px;
+  width: 170px;
   margin: auto;
+  display: none;
 }
 
 .email-section {
